--- a/tmux.conf
+++ b/tmux.conf
@@ -11,3 +11,6 @@ set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
+set -g default-terminal "screen-256color"
+setw -q -g utf8 on
