organize vimrc. add options for plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,5 +12,7 @@ set -g mouse on
 # don't rename windows automatically
 set-option -g allow-rename off
 
+#set -g default-terminal "xterm-256color"
+
 set -g default-terminal "screen-256color"
 setw -q -g utf8 on
