--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,11 @@ bind-key C-a send-prefix
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# Enable mouse control (clickable windows, panes, resizable panes) (version below 2.1)
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
