--- a/tmux.conf
+++ b/tmux.conf
@@ -21,3 +21,15 @@ set-option -g allow-rename off
 
 set -g default-terminal "screen-256color"
 setw -q -g utf8 on
+
+# vim-like pane switching
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
+
+# unbind keys
+unbind Up     
+unbind Down   
+unbind Left   
+unbind Right  
