--- a/tmux.conf
+++ b/tmux.conf
@@ -33,3 +33,18 @@ unbind Up
 unbind Down   
 unbind Left   
 unbind Right  
+
+# used to restore sessions after restart
+#set -g @continuum-restore 'on'
+
+# this is to disable the powerline styled characters
+#set -g @nord_tmux_no_patched_font "1"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin "nordtheme/tmux"
+
+run '~/.tmux/plugins/tpm/tpm'
